gestor/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erpserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: erpserver
  template:
    metadata:
      labels:
        app: erpserver
      annotations:
        kubectl.kubernetes.io/default-container: erpserver
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: erpserver
          image: erpserver
          imagePullPolicy: Never # TODO: Get image from registry
          ports:
            - name: erpserver
              containerPort: 8069
            - name: ssh
              containerPort: 22
          readinessProbe:
            tcpSocket:
              port: 8069
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            limits:
              cpu: 800m
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 100Mi
          stdin: true
          tty: true
        - name: timescale
          image: timescale/timescaledb-postgis:latest-pg10
        - name: mongo
          image: mongo:3.0
        - name: redis
          image: redis:5.0
