gestor/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erpserver
spec:
  selector:
    app: erpserver
  type: NodePort
  ports:
    - name: erpserver
      port: 8069
      targetPort: 8069
      nodePort: 0
    - name: ssh
      port: 22
      targetPort: 22
      nodePort: 0
